# libayatana-common

./: .build.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL.md  README.md
data/: CMakeLists.txt  org.ayatana.common.gschema.xml.in
debian/: changelog  control  copyright  copyright.in  libayatana-common-dev.install  libayatana-common0.install  rules  watch
po/: POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-common.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  (+93 more)
src/: CMakeLists.txt  libayatana-common.pc.in  utils.c  utils.h
tests/: CMakeLists.txt  tst_utils.cpp
